# UndertaleCPPLibrary

./: .gitignore  CMakeLists.txt
revision_2/src/: CMakeLists.txt
revision_2/src/src/headers/core/: CoreResources.h  LaunchParameters.h  State.h
revision_2/src/src/headers/resource/: ResourceItem.h  ResourceManager.h
revision_2/src/src/implementation/fights/: ActCommand.cpp  FightInterface.cpp
revision_2/src/src/implementation/render/: LetterboxView.cpp
revision_3/test/: CMakeLists.txt
src/: CMakeLists.txt
src/headers/audio/: Audio.h  LoggedAudio.h  SimpleAudio.h
src/headers/encounter/components/: Arena.h  ButtonInterface.h  Controls.h  EncounterInterface.h  FightBar.h  PlayerInfoInterface.h
src/headers/encounter/components/buttons/: ActButton.h  DefaultButtons.h  EncounterBaseButton.h  EncounterButton.h  FightButton.h  ItemButton.h  MercyButton.h  TexturedEncounterButton.h
src/headers/encounter/components/fightBar/: FightBar.h  SimpleFightBar.h
src/headers/encounter/states/: ActionSelectState.h
src/headers/locator/: AudioLocator.h  Locator.h  LoggerLocator.h  PlayerLocator.h  ResourceLocator.h  StatesLocator.h
src/headers/logging/: ConsoleLogger.h  Logger.h
src/headers/player/: Player.h  PlayerStatistics.h
src/headers/resource/: BasicResourceResolver.h  DefaultResourceResolver.h  ResourceResolver.h  Resources.h
src/headers/state/: SimpleStateManager.h  State.h  StateManager.h
src/implementation/audio/: LoggedAudio.cpp  SimpleAudio.cpp
src/implementation/encounter/components/: Arena.cpp  ButtonInterface.cpp  Controls.cpp  EncounterInterface.cpp  FightBar.cpp  PlayerInfoInterface.cpp
src/implementation/encounter/states/: ActionSelectState.cpp
src/implementation/locator/: AudioLocator.cpp  Locator.cpp  LoggerLocator.cpp  PlayerLocator.cpp  ResourceLocator.cpp  StatesLocator.cpp
src/implementation/logging/: ConsoleLogger.cpp
src/implementation/player/: Player.cpp  PlayerStatistics.cpp
src/implementation/resource/: BasicResourceResolver.cpp  DefaultResourceResolver.cpp  Resources.cpp
src/implementation/state/: SimpleStateManager.cpp  StateManager.cpp
src/src/Player/: Player.cpp  Player.h
src/src/core/: AudioManager.cpp  AudioManager.h  Controls.cpp  Controls.h
src/src/encounter/: Encounter.cpp  Encounter.h  Enemy.cpp  Enemy.h  EnemyEventHandler.h  IEncounter.h  Projectile.cpp  Projectile.h
src/src/encounter/states/: ActionSelectState.cpp  ActionSelectState.h  EncounterState.cpp  EncounterState.h  EnemySelectState.cpp  EnemySelectState.h  FightEnemySelectState.cpp  FightEnemySelectState.h  ItemSelectState.cpp  ItemSelectState.h  MercySelectState.cpp  MercySelectState.h
src/src/headers/audio/: AudioManager.h
src/src/headers/core/: Logger.h  UndertaleGame.h
src/src/headers/fights/: ActCommand.h  ActCommandHandler.h  Fight.h  FightEventHandler.h
src/src/headers/player/: Player.h  PlayerStats.h  PlayerStatsHandler.h
src/src/headers/render/: Sprite.h
src/src/implementation/core/: CoreResources.cpp  LaunchParameters.cpp  Logger.cpp  UndertaleGame.cpp
src/src/implementation/fights/: ActCommand.cpp  Fight.cpp  FightEventHandler.cpp  FightInterfaceControls.cpp
src/src/implementation/player/: Player.cpp  PlayerStatsHandler.cpp
src/src/implementation/render/: Renderer.cpp  Sprite.cpp
src/src/implementation/resource/: ResourceItem.cpp  ResourceManager.cpp
src/src/player/: Inventory.cpp  Item.cpp  Item.h  Player.cpp  Player.h
src/src/state/: State.cpp  State.h  StateManager.cpp  StateManager.h
tExample/: Main.cpp  (+1 more)
test/: CMakeLists.txt  Main.cpp  catch.hpp
test/src/: Main.cpp
test/tests/: FightBarComponentTests.cpp
(+119 files in other folders)
